--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,23 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        		 <!--	<dependency>
+      spring security  
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-web</artifactId>
+	</dependency>
+  <dependency>
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-config</artifactId>
+	</dependency>
+  <dependency>
+	<groupId>org.thymeleaf.extras</groupId>
+	<artifactId>thymeleaf-extras-springsecurity4</artifactId>	
+	<version>2.1.2.RELEASE</version>
+  </dependency>
+  -->
     </dependencies>
-
+		
     <build>
         <plugins>
             <plugin>
