--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.thymeleaf.suffix=.html
 spring.jpa.show-sql=true
 
 #spring.messages.basename=messages/messages
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=900
